020 ==> 368262 - Google services tool does not use kaccounts.
021 ==> 376913 - Can't create a new album in picasa/googlephoto.
022 ==> 404896 - Vertical video are displayed horizontally.
023 ==> 404859 - Using Batch Queue Manager to make a JPG copy of the images on completion the "arw" images are no longer visible in the originating album.
024 ==> 404893 - Digikam::DigikamApp::slotSolidDeviceChanged: slotSolidDeviceChanged: messages referring to directory that digikam should not care about.
025 ==> 264296 - Lack of right-click delete of points in Curves [patch].
026 ==> 404954 - Places, Devices, and Removable Devices no longer show in "Select Target Location".
027 ==> 404962 - List of subfolders: incorrect encoding (spaces -> %20, accents).
028 ==> 402724 - digiKam Settings/Configuration: missing section "Plugins" in Windows/6.0.0B3.
029 ==> 404987 - Ability to select which import/export options are included in menu.
030 ==> 404999 - Inconsistency in facetag font size.
031 ==> 244259 - Last image is displayed twice when Advanced Slideshow with KenBurns effect is run more than once.
032 ==> 405043 - Add volume control to video playback.
033 ==> 401253 - Face detect crashes every time.
034 ==> 405042 - Ability to loop video playback.
035 ==> 405138 - Can not disable webservice plugin.
036 ==> 405137 - Original items visible in Thumbnails view.
037 ==> 400606 - Dead space above thumbnails.
038 ==> 380434 - 5.6.0-pre pkg does not detect filesystem changes.
039 ==> 405250 - Menus gone missing.
040 ==> 388198 - Menu Help -> What's this is not used.
041 ==> 392570 - Missing Option to display complete filename.
042 ==> 375474 - Renaming People Tag Causes Unpredictable Sort Order In People Menu.
043 ==> 398868 - Video upside down in Preview (Thumbnail ok).
044 ==> 380065 - "Open with" menu entry missing [patch].
045 ==> 405258 - Provide an OpenWith... function to get a specific ImageEditor.
046 ==> 