@@ -60,4 +60,5 @@ BUGFIXES:
 043 ==> 398868 - Video upside down in Preview (Thumbnail ok).
 044 ==> 380065 - "Open with" menu entry missing [patch].
 045 ==> 405258 - Provide an OpenWith... function to get a specific ImageEditor.
-046 ==> 
+046 ==> 402807 - Progress manager doesn't seem to be involved in the fingerprint scanning (v6.0 beta 3).
+047 ==> 
